--- a/package.json
+++ b/package.json
@@ -5,10 +5,20 @@
         "build": "vite build"
     },
     "devDependencies": {
+        "@headlessui/vue": "^1.6.6",
+        "@heroicons/vue": "^1.0.6",
+        "@vitejs/plugin-vue": "^2.3.3",
+        "autoprefixer": "^10.4.7",
         "axios": "^0.25",
         "laravel-vite-plugin": "^0.2.1",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14",
+        "postcss": "^8.4.14",
+        "tailwindcss": "^3.1.5",
         "vite": "^2.9.11"
+    },
+    "dependencies": {
+        "vue": "^3.2.36",
+        "vue-router": "^4.1.1",
+        "vuex": "^4.0.2"
     }
 }
